Adicionando novas endpoints do swagger
